--- a/custom.css
+++ b/custom.css
@@ -11,3 +11,46 @@
 	color: greenyellow;
 	font-style: normal;
 }
+
+
+.reveal .authors {
+	margin-top: 3em;
+	font-size: 0.4em;
+    text-shadow: 0px 2px 3px #000;
+	line-height: 3em;
+}
+
+.reveal .box {
+	background-color: #333;
+	border: 1px solid lightblue;
+	box-shadow: 0px 0px 6px rgba(0,0,0,0.8);
+	display: inline-block;
+}
+
+.reveal .entity span  {
+	background: #555;
+	color: #ddd;
+	font-size: 0.7em; 
+	font-weight: bold; 
+	line-height: 1; 
+	border-radius: 0.2em; 
+	text-transform: uppercase; 
+	vertical-align: middle; 
+	margin-left: 0.1rem;
+	padding: 0.3em 0.3em;
+}
+
+.reveal .entity {
+	padding: 0.3em 0.3em; 
+	margin: 0 0.25em; 
+	line-height: 1; 
+	border-radius: 0.35em;
+}
+
+.reveal .person {
+	background: #aa9cfc;
+}
+
+.reveal .org {
+	background: #7aecec;
+}
