--- a/custom.css
+++ b/custom.css
@@ -27,10 +27,20 @@
 	display: inline-block;
 }
 
+.reveal table {
+	background-color: #333;
+	border: 1px solid lightblue;
+	box-shadow: 0px 0px 6px rgba(0,0,0,0.8);
+}
+
+.reveal table td {
+	border: none;
+}
+
 .reveal .entity span  {
 	background: #555;
 	color: #ddd;
-	font-size: 0.7em; 
+	font-size: 0.5em; 
 	font-weight: bold; 
 	line-height: 1; 
 	border-radius: 0.2em; 
@@ -41,10 +51,10 @@
 }
 
 .reveal .entity {
-	padding: 0.3em 0.3em; 
+	padding: 0.2em 0.2em; 
 	margin: 0 0.25em; 
 	line-height: 1; 
-	border-radius: 0.35em;
+	border-radius: 0.2em;
 }
 
 .reveal .person {
