--- a/custom.css
+++ b/custom.css
@@ -27,6 +27,17 @@
 	display: inline-block;
 }
 
+.reveal .definition {
+	width: auto;
+	margin: auto;
+	padding: .7em;
+	text-align: left;
+	background-color: #333;
+	border-top: 25px solid lightblue;
+	box-shadow: 0px 0px 6px rgba(0,0,0,0.8);
+	display: inline-block;
+}
+
 .reveal table {
 	background-color: #333;
 	border: 1px solid lightblue;
